Fix overflow of long channel names in network tab.

--- a/app/components/client/TitleBar.css
+++ b/app/components/client/TitleBar.css
@@ -17,12 +17,12 @@
   height: 3rem;
   border-right: 1px solid rgba(255, 255, 255, 0.1);
   float: left;
-  text-overflow: ellipsis;
 }
 
 .channel_name {
   font-size: 1.5em;
-  max-width: 20%;
+  max-width: 35%;
+  word-break: break-all;
 }
 
 .channel_topic {
