--- a/app/components/client/network_bar/ChannelTab.css
+++ b/app/components/client/network_bar/ChannelTab.css
@@ -53,6 +53,11 @@ li.channel a, li.special a, li.pm a {
   height: calc(100% - 1.2rem);
 }
 
+li a.channel_name {
+  width: 8rem;
+  word-wrap: break-word;
+}
+
 li a:hover {
   background-color: rgba(0, 0, 0, 0.05);
   cursor: pointer;
